# spbased

./: .env  .envrc  .gitignore  .sqllssrc.json  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md  TODO.md  bun.lockb  dprint.json  flake.nix  package.json
clients/consume/: package.json  svelte.config.js
clients/consume/src-tauri/: tauri.conf.json
clients/consume/src/lib/components/ui/input/: input.svelte
clients/consume/src/lib/model/: tag.svelte.ts
clients/consume/src/routes/: +layout.svelte  SideBarLink.svelte  ToggleThemeButton.svelte
clients/flashcard/: package.json
clients/flashcard/src-tauri/: tauri.conf.json
clients/flashcard/src-tauri/capabilities/: default.json
clients/flashcard/src/lib/model/: source.ts
clients/flashcard/src/routes/: +layout.svelte  BottomBar.svelte  NavButton.svelte  SideBar.svelte
clients/flashcard/src/routes/source/[id]/: +page.svelte  +page.ts
clients/reading/: package.json
clients/reading/src-tauri/: Cargo.toml  tauri.conf.json
clients/reading/src/lib/model/: source.ts  tag.ts
clients/reading/src/routes/: +layout.svelte  +page.svelte  SideBar.svelte  ThemeToggleButton.svelte
crates/algo/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: client.rs  collection.rs  error.rs  lib.rs  scheduler.rs  server.rs  types.rs
crates/api/tests/: collection.rs
crates/api/tests/common/: mod.rs
crates/cli/: .sqllsrc.json  .sqllssrc.json  Cargo.toml  Makefile.toml  build.rs
crates/cli/.spbased/: config.toml
crates/cli/grammars/: filter_lang.pest  tag.pest
crates/cli/migrations/000-base/: up.sql
crates/cli/migrations/001-item/: down.sql  up.sql
crates/cli/scripts/new_migration/: Cargo.toml
crates/cli/scripts/new_migration/src/: main.rs
crates/cli/sql/: 001_init.sql  db_close.sql  db_open.sql
crates/cli/src/: algo.rs  cli.rs  commands.rs  config.rs  db.rs  lib.rs  main.rs  queries.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs
crates/entity/: Cargo.toml
crates/entity/src/: conversion.rs  lib.rs  new_review_item.rs  prelude.rs  review_event_log.rs  review_item.rs  review_item_type.rs  review_log.rs  scheduled_review_event.rs  tag.rs  tag_map.rs
crates/flashcard/: Cargo.toml
crates/flashcard-tui/: Cargo.toml  README.md  TODO.md
crates/flashcard-tui/src/: app.rs  args.rs  config.rs  constants.rs  event.rs  lib.rs  main.rs  preamble.rs  state.rs  traits.rs  tui.rs  util.rs
crates/flashcard-tui/src/components/: add_card.rs  bottom_bar.rs  browser.rs  edit_card.rs  help_bar.rs  home.rs  mod.rs  review.rs  review_card.rs  root.rs  tag_area.rs  utils.rs
crates/flashcard-tui/src/components/common/: list.rs  mod.rs  text_area.rs  throbber.rs
crates/flashcard-tui/src/contexts/: help.rs  mod.rs  stats.rs
crates/flashcard/src/: lib.rs  main.rs
crates/flashcards-tui/: .envrc  Cargo.toml  LICENSE  README.md  build.rs
crates/flashcards-tui/.config/: config.toml
crates/flashcards-tui/.github/workflows/: cd.yml
crates/flashcards-tui/src/: action.rs  app.rs  config.rs  main.rs  utils.rs
crates/flashcards-tui/src/components/: home.rs
crates/grpc/: Cargo.toml  build.rs
crates/grpc/proto/: spbased.proto
crates/grpc/src/: lib.rs  spbased.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20231125_154734_review_items.rs  m20231127_141033_scheduled_review_events.rs  m20231127_152729_review_events_log.rs  m20231203_223242_review_item_inbox.rs  m20240801_172130_review_item_table.rs  m20240801_172130_review_item_trigger.sql  m20240801_190425_tags_table.rs  m20240801_194326_review_log_table.rs  test.rs
crates/model/: Cargo.toml
crates/model/src/: lib.rs
crates/reading/: Cargo.toml
crates/reading/src/: lib.rs  main.rs
crates/sra/: Cargo.toml
crates/sra/src/: lib.rs
crates/sra/src/model/: grade_ops.rs
proto/: spbased.proto
scripts/: add_flashcard  create_migration.sh  edit_flashcard  flashcard  flashcard.py  flashcard.sh  flashcard_image.py  generate_entities.sh  new_migration.sh  reading  review_flashcard  run_migrations.sh  setup.py  study
