version = "0.1"
[workspace]
members = [
  "crates/cli",
  "crates/cli/scripts/new_migration",
  "crates/model",
  "crates/sra",
]

resolver = "2"

[workspace.dependencies]
# internal dependencies
anyhow = "1.0.86"
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
config = "0.14.0"
dialoguer = "0.11.0"
dirs = "5.0.1"
include_dir = "0.7.4"
jmespath = { version = "0.3", features = ["specialized"] }
model = { path = "./crates/model" }
normalize-path = "0.2.1"
pest = { version = "2.7" }
pest_ascii_tree = "0.1.0"
pest_derive = { version = "2.7" }
resolve-path = "0.1.0"
rusqlite = { version = "0.31.0", features = ["bundled", "time", "uuid", "rusqlite-macros"] }
rusqlite_migration = { version = "1.2", features = ["from-directory"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sra = { path = "./crates/sra" }
time = { version = "0.3.36", features = ["parsing", "formatting", "macros", "serde", "default"] }
# external dependencies
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1.10.0", features = ["v4"] }
