[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
prost = { workspace = true }
sea-orm = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }
grpc = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
