[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
prost = { workspace = true }
sea-orm = { workspace = true }
entity = { workspace = true }
migration = { workspace = true }
grpc = { workspace = true }
common = { workspace = true }
algo = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio-stream = { workspace = true }
tower = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
