[package]
name = "spbasedctl"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
sra = { workspace = true }
clap = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
dirs = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
dialoguer = { workspace = true }
include_dir = { workspace = true }
resolve-path = { workspace = true }
normalize-path = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }
config = { workspace = true }
