[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { workspace = true }
tokio = { workspace = true }
migration = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
