[package]
name = "flashcard-tui"
version = "0.1.0"
authors = ["lakrestofer <lakrestofer@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
leptos_reactive = "0.6.9"
ratatui = { workspace = true }
tokio = { workspace = true }
tui-textarea = "0.4.0"
