[package]
name = "flashcard-tui"
version = "0.1.0"
authors = ["lakrestofer <lakrestofer@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
color-eyre = { workspace = true }
crossterm = { workspace = true }
futures = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
strip-ansi-escapes = { workspace = true }
tui-textarea = "0.4.0"
reactive_graph = { git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.7"}
any_spawner = { git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.7", features = ["tokio"] }
throbber-widgets-tui = "0.5.0"

[build-dependencies]
vergen = { version = "8.2.6", features = [ "build", "git", "gitoxide", "cargo" ]}
