[package]
name = "flashcards-tui"
version = "0.1.0"
edition = "2021"
description = "flashcards frontend for spbased ecosystem"

authors = ["lakrestofer <lakrestofer@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# see https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3

[dependencies]
# internal dependencies
common = { workspace = true }
api = { workspace = true }
# ==== external dependencies ====
# dependencies that are used in other crates
better-panic = "0.3.0"
clap = { workspace = true }
color-eyre = { workspace = true }
config = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true  }
serde_json = { workspace = true }
directories = { workspace = true }
# depenencies that are only used in this crate
derive_deref = "1.1.1"
human-panic = "1.2.0"
json5 = "0.4.1"
libc = "0.2.148"
log = "0.4.20"
pretty_assertions = "1.4.0"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = { version = "0.25.0", features = ["derive"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

[build-dependencies]
vergen = { version = "8.2.6", features = [ "build", "git", "gitoxide", "cargo" ]}
