[package]
name = "flashcards-tui"
version = "0.1.0"
edition = "2021"
description = "flashcards frontend for spbased ecosystem"

authors = ["lakrestofer <lakrestofer@gmail.com>"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal dependencies
common = { workspace = true }
api = { workspace = true }
# ==== external dependencies ====
# dependencies that are used in other crates
clap = { workspace = true }
color-eyre = { workspace = true }
config = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
serde = { workspace = true  }
serde_json = { workspace = true }
toml = { workspace = true }
directories = { workspace = true }
# depenencies that are only used in this crate
derive_deref = "1.1.1"
human-panic = "1.2.0" # error reporting
better-panic = "0.3.0" # error reporting
log = "0.4.20" # error reporting
signal-hook = "0.3.17" # this is used to properly raise the correct signal when suspending
strip-ansi-escapes = "0.2.0" # used to take text that has been modified for display in the terminal with ansi codes (addition of colors) and remove formating such that it is sutiable for plaintext outputs.
strum = { version = "0.25.0", features = ["derive"] } # easier handling of enums and strings
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }

[dev-dependencies]
pretty_assertions = { workspace = true }

[build-dependencies]
vergen = { version = "8.2.6", features = [ "build", "git", "gitoxide", "cargo" ]}
