[package]
name = "reading"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
dialoguer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
resolve-path = { workspace = true }
normalize-path = { workspace = true }
